--- a/client/.gitignore
+++ b/client/.gitignore
@@ -11,6 +11,11 @@ node_modules
 dist
 dist-ssr
 *.local
+*.log
+*.log.*
+package-lock.json
+.env.*
+!.env.example
 
 # Editor directories and files
 .vscode/*
