--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "@tanstack/react-query-devtools": "^5.32.1",
     "axios": "^1.6.8",
     "chartjs": "^0.3.24",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
